# the10or-goIt-homework-django-with-email

./: pyproject.toml
data/db/: postmaster.pid
data/db/base/1/: 1259  2619  2619_vm  2696
data/db/base/16388/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  2187  2224  2228  2337  24576  24577  24581  24582  24584  24585  24588  24590  24592  (+260 more)
data/db/base/5/: pg_internal.init
data/db/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
data/db/pg_xact/: 0000
hw_quotes/: manage.py
hw_quotes/hw_quotes/: asgi.py  settings.py  urls.py  wsgi.py
hw_quotes/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_quotes/quotes/migrations/: 0001_initial.py  0002_alter_author_born_date.py
hw_quotes/quotes/static/quotes/: style.css
hw_quotes/quotes/templates/quotes/: add_author.html  add_quote.html  author_details.html  authors.html  base.html  index.html  quotes_by_tag.html
hw_quotes/quotes/templatetags/: extract.py  my_filters.py
hw_quotes/users/: forms.py  models.py  urls.py  views.py
hw_quotes/users/migrations/: 0001_initial.py
hw_quotes/users/templates/users/: login.html  logout.html  password_reset.html  profile.html  signup.html
hw_quotes/utils/: migration.py
