[tool.poetry]
name = "goit-hmwrk-dj-qts"
version = "0.1.0"
description = ""
authors = ["the10or <the10or@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
